# Medical-Encyclopedia-QA-Application

./: .env  .gitignore  Jenkinsfile  README.md  projectintro.text  pyproject.toml  setup.py
RAG_Medcal_Chatbot.egg-info/: PKG-INFO  SOURCES.txt
app/: application.py
app/components/: data_loader.py  embeddings.py  llm.py  pdf_loader.py  retriever.py  vector_store.py
app/config/: config.py
app/medical_chatbot.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
app/templates/: index.html
custom_jenkins/: Dockerfile
medical_chatbot.egg-info/: PKG-INFO  SOURCES.txt
yenv/: pyvenv.cfg
